testsuite/tests/package/package07e.hs
module Package07e where
import GHC.Hs.MyTypes
import GHC.Hs.Type
import GHC.Hs.Utils
import GHC.Types.Unique.FM
